--- a/WebContent/resources/lib/default/main-style.css
+++ b/WebContent/resources/lib/default/main-style.css
@@ -46,3 +46,21 @@ a {
 hr {
 	border-top: 1px solid #e8e8e8;
 }
+.btn-circle {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 20px;
+}
+.btn-circle.btn-sm {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 20px;
+}
